--- a/src/src/styles.scss
+++ b/src/src/styles.scss
@@ -5,14 +5,22 @@
 
 // Import Lato Google Font
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
+@import url('https://fonts.googleapis.com/css2?family=Orelega+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orelega+One&family=Urbanist:wght@300&display=swap');
 
 // Update Bulma's global variables
-$family-sans-serif: "Lato", sans-serif;
+$family-sans-serif: "Urbanist", sans-serif;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
 // More theme colors could be added here...
-$primary: #454545;
+$primary: #640d14;
+$primary-invert: #ad2831;
+$black: #250902;
+$link: $primary;
+$info: #38040e;
+$card-background-color: $info;
+$tile-background-color: $primary-invert;
 
 $spaces: ("0": 0, "1": 1.65rem, "2": 1.75rem);
 
